# fraud-investigation-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: README.md
docs/: 01_model_documentation.md  02_challenger_analysis.md  03_fairness_analysis.md  04_monitoring_plan.md  05_llm_governance.md  06_sr_11_7_overview.md  07_reason_codes.md
docs/results/: champion_metrics.json  feature_psi.csv
evals/: agent_eval_set.jsonl  run_evals.py
evals/results/: eval_001.json  eval_002.json  eval_003.json  eval_004.json  eval_005.json  eval_006.json  eval_007.json  eval_008.json  eval_009.json  eval_010.json  eval_011.json  eval_012.json  eval_013.json  eval_014.json  eval_015.json  eval_016.json  eval_017.json  eval_018.json  eval_019.json  eval_020.json  eval_021.json  eval_022.json  eval_023.json  eval_024.json  eval_025.json  eval_026.json  eval_027.json  eval_028.json  eval_029.json  eval_030.json
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_model_results.ipynb
scripts/: generate_eval_set.py  phase1_stats.py  phase2_shap.py  phase3_compare.py  phase4_monitoring.py  phase5_demo.py  phase5_recheck_guardrails.py
src/agent/: guardrails.py  investigator.py  tools.py
src/agent/prompts/: v1.txt
src/app/: streamlit_app.py
src/data/: load.py  preprocess.py
src/explain/: shap_utils.py
src/models/: challenger.py  champion.py  train.py
src/monitoring/: drift.py  fairness.py
tests/: test_agent_guardrails.py  test_models.py  test_preprocessing.py
