[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fraud-agent-mrm"
version = "0.1.0"
description = "Agentic Fraud Investigation System with Model Risk Governance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Data / ML
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "shap>=0.45",
    "imbalanced-learn>=0.12",
    "scipy>=1.12",
    "joblib>=1.3",
    # Storage
    "pyarrow>=15.0",
    # LLM
    "anthropic>=0.30",
    # UI
    "streamlit>=1.35",
    "plotly>=5.20",
    # Viz
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Config
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.9",
]

# uv uses [dependency-groups] for --dev; mirrors [project.optional-dependencies.dev]
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
